--- a/Act3/MDK-ARM/NUCLEO-F103RB/NUCLEO-F103RB.build_log.htm
+++ b/Act3/MDK-ARM/NUCLEO-F103RB/NUCLEO-F103RB.build_log.htm
@@ -3,32 +3,30 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Tool Versions:</h2>
-IDE-Version: µVision V5.30.0.0
-Copyright (C) 2020 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: CSN CSN, INSA de Toulouse, LIC=----
+IDE-Version: µVision V5.29.0.0
+Copyright (C) 2019 ARM Ltd and ARM Germany GmbH. All rights reserved.
+License Information: Robin Moine, INSA, LIC=----
  
 Tool Versions:
-Toolchain:       MDK-Lite  Version: 5.30.0.0
+Toolchain:       MDK-Lite  Version: 5.29.0.0
 Toolchain Path:  C:\Keil_v5\ARM\ARMCC\Bin
 C Compiler:      Armcc.exe V5.06 update 6 (build 750)
 Assembler:       Armasm.exe V5.06 update 6 (build 750)
 Linker/Locator:  ArmLink.exe V5.06 update 6 (build 750)
 Library Manager: ArmAr.exe V5.06 update 6 (build 750)
 Hex Converter:   FromElf.exe V5.06 update 6 (build 750)
-CPU DLL:         SARMCM3.DLL V5.30.0.0
+CPU DLL:         SARMCM3.DLL V5.29.0.0
 Dialog DLL:      DARMSTM.DLL V1.68.0.0
 Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.7.0
 Dialog DLL:      TARMSTM.DLL V1.66.0.0
  
 <h2>Project:</h2>
-U:\Documents\4A IR\Info mat microcontrôleurs\TP\BE_STM32_initiation\Act2\MDK-ARM\Project.uvprojx
-Project File Date:  10/05/2020
+D:\Cours\BE_STM32_initiation\Act3\MDK-ARM\Project.uvprojx
+Project File Date:  10/15/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Rebuild target 'NUCLEO-F103RB'
-assembling startup_stm32f103xb.s...
-compiling system_stm32f1xx.c...
+Rebuild target 'Simulateur'
 compiling MyTimer.c...
 ..\MyDrivers\MyTimer.c(155): warning:  #1-D: last line of file ends without a newline
   }
@@ -37,17 +35,20 @@ compiling Chrono.c...
 compiling main.c...
 compiling stm32f1xx_ll_rcc.c...
 compiling stm32f1xx_ll_utils.c...
+compiling stm32f1xx_ll_usart.c...
+assembling startup_stm32f103xb.s...
+compiling system_stm32f1xx.c...
 linking...
-Program Size: Code=1436 RO-data=268 RW-data=28 ZI-data=1028  
+Program Size: Code=2452 RO-data=292 RW-data=60 ZI-data=1028  
 "NUCLEO-F103RB\NUCLEO-F103RB.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
 Package Vendor: ARM
-                http://www.keil.com/pack/ARM.CMSIS.5.7.0.pack
-                ARM.CMSIS.5.7.0
+                http://www.keil.com/pack/ARM.CMSIS.5.6.0.pack
+                ARM.CMSIS.5.6.0
                 CMSIS (Cortex Microcontroller Software Interface Standard)
-   * Component: CORE Version: 5.4.0
+   * Component: CORE Version: 5.3.0
 
 Package Vendor: Keil
                 http://www.keil.com/pack/Keil.STM32F1xx_DFP.2.3.0.pack
@@ -55,14 +56,14 @@ Package Vendor: Keil
                 STMicroelectronics STM32F1 Series Device Support, Drivers and Examples
 
 <h2>Collection of Component include folders:</h2>
-  .\RTE\_NUCLEO-F103RB
-  C:\Programdata\Keil\Arm\Packs\ARM\CMSIS\5.7.0\CMSIS\Core\Include
-  C:\Programdata\Keil\Arm\Packs\Keil\STM32F1xx_DFP\2.3.0\Device\Include
+  .\RTE\_Simulateur
+  C:\Users\Robin\AppData\Local\Arm\Packs\ARM\CMSIS\5.6.0\CMSIS\Core\Include
+  C:\Users\Robin\AppData\Local\Arm\Packs\Keil\STM32F1xx_DFP\2.3.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
 
-   * Component: ARM::CMSIS:CORE:5.4.0
-Build Time Elapsed:  00:00:02
+   * Component: ARM::CMSIS:CORE:5.3.0
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
